--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button onclick="divide()">Divide</button>
     <button onclick="multiply()">Multiply</button>
     <br>
-    <span id="sum-el">Sum</span>
+    <span id="sum-el">Sam</span>
     <script src="index.js"></script>
 </body>
 </html>
